# arm-spec-parser

./: Cargo.toml  LICENSE.md  README.md
src/: encoding.rs  lib.rs  psuedocode.rs
src/psuedocode/: mod.rs  span.rs
tests/: abs.xml  adr.xml  at_sys.xml  encodingindex.xml  integration_tests.rs
